--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <title>uas desain web</title>
   </head>
   <body>
-
     <!-- Navbar -->
     <nav
       class="navbar navbar-expand-lg navbar-light"
@@ -59,9 +58,9 @@
     <!-- Akhir Navbar -->
 
     <!-- Jumbotron -->
-    <!-- <section class="jumbotron text-center">
+    <section class="jumbotron text-center">
       <img
-        src="img/riska.jpg"
+        src="img/riska1.jpg"
         alt="Riska Kamelia Sari"
         width="200"
         class="rounded-circle img-thumbnail"
@@ -71,7 +70,9 @@
         Saya adalah seorang Mahasiswa dari kampus Politeknik Ganesha Medan
         Semester 2
       </p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+
+      <!-- Gelombang -->
+      <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffff"
           fill-opacity="1"
@@ -86,7 +87,5 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
-
-     
   </body>
 </html>
