--- a/index.html
+++ b/index.html
@@ -72,30 +72,115 @@
       </p>
 
       <!-- Gelombang -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,128L34.3,128C68.6,128,137,128,206,112C274.3,96,343,64,411,53.3C480,43,549,53,617,80C685.7,107,754,149,823,144C891.4,139,960,85,1029,64C1097.1,43,1166,53,1234,58.7C1302.9,64,1371,64,1406,64L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffff"
+          fill-opacity="1"
+          d="M0,128L34.3,128C68.6,128,137,128,206,112C274.3,96,343,64,411,53.3C480,43,549,53,617,80C685.7,107,754,149,823,144C891.4,139,960,85,1029,64C1097.1,43,1166,53,1234,58.7C1302.9,64,1371,64,1406,64L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- Akhir Jumbotron -->
 
-<!-- About -->
-     <section id="about">
-        <div class="container">
-            <div class="row text-center mb-3">
-                <h2>About Me</h2>
-            </div>
+    <!-- About -->
+    <section id="about">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <h2>About Me</h2>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
-            <div class="col-4">
-                <p>Hallo! Nama asli saya adalah Riska Kamelia Sari . Saya lahir pada tanggal 17 mei 2007.
-                    Saya tinggal di jln ileng gg.mangga rengas pulau, Medan Marelan.
-                </p>
-            </div>
-            <div class="col-4">
-                <p>Saat ini saya sedang menjalankan kuliah di suatu kampus Politeknik yaitu, Politeknik Ganesha Medan
+      </div>
+      <div class="row justify-content-center fs-5 text-center">
+        <div class="col-md-4">
+          <p>
+            Hallo! Nama asli saya adalah Riska Kamelia Sari . Saya lahir pada
+            tanggal 17 mei 2007. Saya tinggal di jln ileng gg.mangga rengas
+            pulau, Medan Marelan.
+          </p>
         </div>
-    </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FADADB" fill-opacity="1" d="M0,0L34.3,21.3C68.6,43,137,85,206,96C274.3,107,343,85,411,112C480,139,549,213,617,229.3C685.7,245,754,203,823,170.7C891.4,139,960,117,1029,96C1097.1,75,1166,53,1234,58.7C1302.9,64,1371,96,1406,112L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
-     </section>
+        <div class="col-md-4">
+          <p>
+            Saat ini saya sedang menjalankan kuliah di suatu kampus Politeknik
+            yaitu, Politeknik Ganesha Medan
+          </p>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#FADADB"
+          fill-opacity="1"
+          d="M0,0L34.3,21.3C68.6,43,137,85,206,96C274.3,107,343,85,411,112C480,139,549,213,617,229.3C685.7,245,754,203,823,170.7C891.4,139,960,117,1029,96C1097.1,75,1166,53,1234,58.7C1302.9,64,1371,96,1406,112L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
     <!-- Akhir About -->
+
+    <!-- Galery -->
+     <section id="Galery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>My Galery</h2>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-4 mb-3">
+               <div class="card">
+      <img src="galery/01.jpg" class="card-img-top" alt="galery 01" />
+      <div class="card-body">
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 mb-3">
+               <div class="card">
+      <img src="galery/02.jpg" class="card-img-top" alt="galery 02" />
+      <div class="card-body">
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 mb-3">
+               <div class="card">
+      <img src="galery/03.jpgS" class="card-img-top" alt="galery 03" />
+      <div class="card-body">
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+    </div>
+  </div>
+   <div class="col-md-4 mb-3">
+               <div class="card">
+      <img src="galery/04.jpg" class="card-img-top" alt="galery 04" />
+      <div class="card-body">
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+    </div>
+  </div>
+   <div class="col-md-4 mb-3">
+               <div class="card">
+      <img src="galery/05.jpg" class="card-img-top" alt="galery 05" />
+      <div class="card-body">
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</section>
+    <!-- Akhir Galery -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
